@@ -1,15 +1,15 @@
 package com.remondis.limbus_integrations;
 
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.fail;
 
-import org.junit.After;
-import org.junit.AfterClass;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.junit.jupiter.MockitoExtension;
 
 import com.remondis.limbus.api.Classpath;
 import com.remondis.limbus.api.LimbusPlugin;
@@ -22,8 +22,18 @@ import com.remondis.limbus.files.InMemoryFilesystemImpl;
 import com.remondis.limbus.files.LimbusFileService;
 import com.remondis.limbus.staging.LimbusStage;
 import com.remondis.limbus.staging.LimbusStaging;
+import com.remondis.limbus.staging.LimbusStagingDeployment;
 
-@RunWith(MockitoJUnitRunner.class)
+/**
+ * Java 9 and later compatibility:
+ * Limbus Engine performs some cleaning/classloader-leak prevention using reflective access to java.base/java.lang.
+ * Therefore to execute the test you have to add
+ * <tt>--add-opens java.base/java.lang=com.remondis.limbus.engine.implementation</tt>.
+ * 
+ * @author cschu
+ *
+ */
+@ExtendWith(MockitoExtension.class)
 public class LimbusIntegrationTest implements DeploymentListener {
 
   private static final String DEPLOY_NAME = "deployName";
@@ -34,25 +44,24 @@ public class LimbusIntegrationTest implements DeploymentListener {
 
   private boolean undeployVeto = false;
 
-  @BeforeClass
+  @BeforeAll
   public static void beforeClass() throws Exception {
     LimbusStaging.prepareEnvironment();
   }
 
-  @AfterClass
+  @AfterAll
   public static void afterClass() {
     LimbusStaging.resetEnvironment();
   }
 
-  @Before
+  @BeforeEach
   public void before() throws Exception {
 
     InMemoryFilesystemImpl filesystem = new InMemoryFilesystemImpl();
 
     // @formatter:off
-     this.stage = LimbusStaging.create(DEPLOY_NAME)
-                 .andClasses(TestPlugin.class)
-                 .withDefaultLimbusComponents(new LimbusDefaultComponents())
+     this.stage = LimbusStaging
+                 .fromDefaultLimbusComponents(new LimbusDefaultComponents())
                  /*
                   *  schuettec - 18.04.2017 : Add the TestEngine, because the proprietary plugin interface
                   *  org.testclient.TestPlugin is used
@@ -71,6 +80,10 @@ public class LimbusIntegrationTest implements DeploymentListener {
   public void test() throws Exception {
     // schuettec - 16.05.2017 : Deny undeploy!
     undeployVeto = true;
+
+    LimbusStagingDeployment deployment = stage.createDeployment(DEPLOY_NAME)
+        .andClasses(TestPlugin.class);
+    stage.deploy(deployment);
 
     Classpath classpath = engine.getClasspath(DEPLOY_NAME);
     LimbusPlugin plugin = engine.getPlugin(classpath, TestPlugin.class.getName(), LimbusPlugin.class);
@@ -95,7 +108,7 @@ public class LimbusIntegrationTest implements DeploymentListener {
     }
   }
 
-  @After
+  @AfterEach
   public void after() {
     if (stage != null) {
       engine.removeDeploymentListener(this);
